[package]
name = "json_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
clap = { version = "4.3.8", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
tower = { version = "0.4", features = ["full"] }
log = "0.4"
fast_log = {version = "1.5"}
async-process = "1.7.0"
futures-lite = "1.13.0"